log
Thu 09 Mar 2023 03:49:01 PM UTC: 
 tests:  0|7
total_score: 0/70
adaa6bb
Thu 09 Mar 2023 03:52:32 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:17:7: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   17 |   aux = a;
      |       ^
exercises.c:19:4: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   19 |   b=aux;
      |    ^
cc1: all warnings being treated as errors
Compilation failed
7503971
Thu 09 Mar 2023 03:53:22 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
5197faa
Thu 09 Mar 2023 03:53:57 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:4: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   18 |   a=10;
      |    ^
cc1: all warnings being treated as errors
Compilation failed
4a0c4f0
Thu 09 Mar 2023 03:54:13 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:18:4: error: statement with no effect [-Werror=unused-value]
   18 |   a==b;
      |   ~^~~
cc1: all warnings being treated as errors
Compilation failed
99b5940
Thu 09 Mar 2023 03:54:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
8aebdd0
Thu 09 Mar 2023 03:54:31 PM UTC: 
 exercises.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  0|7
total_score: 0/70
c81352c
Thu 09 Mar 2023 03:56:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:5: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   16 |   a = 10;
      |     ^
cc1: all warnings being treated as errors
Compilation failed
afedc07
Thu 09 Mar 2023 03:56:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
8b5717e
Thu 09 Mar 2023 03:57:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
f0237be
Thu 09 Mar 2023 03:57:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:6: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   16 |   *a = b;
      |      ^
cc1: all warnings being treated as errors
Compilation failed
93bce70
Thu 09 Mar 2023 03:57:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
77de483
Thu 09 Mar 2023 03:58:23 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘swap’:
exercises.c:16:14: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   16 |   int *aux = *a;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
c96493e
Thu 09 Mar 2023 03:58:38 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
0484df0
Thu 09 Mar 2023 04:17:19 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:32:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   32 |           *max = *a[i];
      |                  ^~~~~
exercises.c:33:18: error: invalid type argument of unary ‘*’ (have ‘int’)
   33 |           *min = *a[i];
      |                  ^~~~~
Compilation failed
88963ac
Thu 09 Mar 2023 04:17:31 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
708c0ee
Thu 09 Mar 2023 04:18:56 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 20/70
2cbfca4
Thu 16 Mar 2023 01:49:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
6244fbe
